navbar to make it one html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="courses.html">Courses</a></li>
+                                <li><a href="#coursessection">Courses</a></li>
                                 <!-- <li><a href="about.html">10th Grade</a></li>
                                 <li><a href="about.html">11th Grade</a></li>
                                 <li><a href="about.html">12th Grade</a></li> -->
@@ -95,7 +95,7 @@
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Faculty</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="about.html">Faculty</a></li>
+                                <li><a href="#teacherssection">Faculty</a></li>
                                 <!-- <li><a   href="services.html">Mr.Randall</a></li>
                                 <li><a href="services.html">Ms.Wissler</a></li>
                                 <li><a href="services.html">Mr.Poland</a></li> -->
@@ -106,12 +106,12 @@
                         <li class="dropdown submenu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activities</a>
                             <ul class="dropdown-menu other_dropdwn">
-                                <li><a href="blog.html">Activities</a></li>
+                                <li><a href="#activitiessection">Activities</a></li>
                                 <!-- <li><a href="blog-2.html">Bioinformatics</a></li>
                                 <li><a href="blog-2.html">Computer Science Honor Society</a></li> -->
                             </ul>
                         </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#contactsection">Contact</a></li>
                         <li><a href="#" class="nav_searchFrom"><i class="fa fa-search"></i></a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -202,7 +202,7 @@
     <!-- End About Us Area -->
 
     <!-- What ew offer Area -->
-    <section class="what_we_area row">
+    <section class="what_we_area row"  id="coursessection">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>WHAT COURSES WE OFFER</h2>
@@ -398,7 +398,7 @@
     <!-- End Our Services Area -->
 
     <!-- Our Team Area -->
-    <section class="our_team_area">
+    <section class="our_team_area" id="teacherssection">
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>Our Team</h2>
@@ -597,7 +597,7 @@
     <!-- End Our testimonial Area -->
 
     <!-- Our Featured Works Area -->
-    <section class="featured_works row" data-stellar-background-ratio="0.3">
+    <section class="featured_works row" data-stellar-background-ratio="0.3" id="activitiessection">
         <div class="tittle wow fadeInUp">
             <h2>Our Featured Works</h2>
             <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
@@ -726,7 +726,7 @@
     <!-- End Our Partners Area -->
 
     <!-- Footer Area -->
-    <footer class="footer_area">
+    <footer class="footer_area" id="contactsection">
         <div class="container">
             <div class="footer_row row">
                 <div class="col-md-3 col-sm-6 footer_about">
