button + footer start

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <h2>WHO WE ARE</h2>
                     </div>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-                    <a href="#" class="button_all">Contact Now</a>
+                    <a href="#contactsection" class="button_all">Contact Now</a>
                 </div>
                 <div class="col-md-5 col-sm-6 about_client">
                     <img src="images/about_client.jpg" alt="">
@@ -740,7 +740,7 @@
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
-                <div class="col-md-3 col-sm-6 footer_about quick">
+                <!-- <div class="col-md-3 col-sm-6 footer_about quick">
                     <h2>Quick links</h2>
                     <ul class="quick_link">
                         <li><a href="#"><i class="fa fa-chevron-right"></i>Building Construction</a></li>
@@ -750,7 +750,7 @@
                         <li><a href="#"><i class="fa fa-chevron-right"></i>Commercial Construction</a></li>
                         <li><a href="#"><i class="fa fa-chevron-right"></i>Concreate Transport</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="col-md-3 col-sm-6 footer_about">
                     <h2>Twitter Feed</h2>
                     <a href="#" class="twitter">@colorlib: Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</a>
