--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	    <div class="container">
             <ul class="nav navbar-nav top_nav">
                 <li><a href="#"><i class="fa fa-phone"></i>571-252-1980</a></li>
+                <li><a href="#"><i class="fa fa-envelope-o"></i>Absentee Email: info@thethemspro.com</a></li>
                 <li><a href="#"><i class="fa fa-clock-o"></i>School Hours: Mon - Fri 9:15-3:15</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social_nav">
@@ -729,15 +730,15 @@
     <footer class="footer_area" id="contactsection">
         <div class="container">
             <div class="footer_row row">
-                <div class="col-md-3 col-sm-6 footer_about">
-                    <h2>ABOUT OUR COMPANY</h2>
-                    <img src="images/footer-logo.png" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="col-md-4 col-sm-6 footer_about">
+                    <!-- <h2>ABOUT OUR COMPANY</h2> -->
+                    <img src="images/ACLlogo.png" alt="">
+                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
                     <ul class="socail_icon">
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> -->
+                        <li><a href="https://twitter.com/LCPS_Academies?ref_src=twsrc%5Etfw%7Ctwcamp%5Eembeddedtimeline%7Ctwterm%5Eprofile%3ALCPS_Academies&ref_url=https%3A%2F%2Fwww.lcps.org%2FPage%2F154616"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li> -->
                     </ul>
                 </div>
                 <!-- <div class="col-md-3 col-sm-6 footer_about quick">
@@ -751,19 +752,18 @@
                         <li><a href="#"><i class="fa fa-chevron-right"></i>Concreate Transport</a></li>
                     </ul>
                 </div> -->
-                <div class="col-md-3 col-sm-6 footer_about">
-                    <h2>Twitter Feed</h2>
-                    <a href="#" class="twitter">@colorlib: Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</a>
-                    <a href="#" class="twitter">@colorlib: Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</a>
+                <div class="col-md-4 col-sm-6 footer_about">
+                    <h2>Social Media</h2>
+                    <a href="https://twitter.com/LCPS_Academies?ref_src=twsrc%5Etfw%7Ctwcamp%5Eembeddedtimeline%7Ctwterm%5Eprofile%3ALCPS_Academies&ref_url=https%3A%2F%2Fwww.lcps.org%2FPage%2F154616" class="twitter">Twitter: @LCPS_Academies</a>
                 </div>
-                <div class="col-md-3 col-sm-6 footer_about">
+                <div class="col-md-4 col-sm-6 footer_about">
                     <h2>CONTACT US</h2>
                     <address>
                         <p>Have questions, comments or just want to say hello:</p>
                         <ul class="my_address">
                             <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>info@thethemspro.com</a></li>
-                            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>+880 123 456 789</a></li>
-                            <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span>Sector # 10, Road # 05, Plot # 31, Uttara, Dhaka 1230 </span></a></li>
+                            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>571-252-1980</a></li>
+                            <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>42075 Loudoun Academy Drive, Leesburg, VA 20175 </a></li>
                         </ul>
                     </address>
                 </div>
