changed courses section

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
     <section class="what_we_area row"  id="coursessection">
         <div class="container">
             <div class="tittle wow fadeInUp">
-                <h2>WHAT COURSES WE OFFER</h2>
-                <h4>AET:IT offers specialized classes offered nowhere else in Loudoun County</h4>
+                <h2  id="whitetext">WHAT COURSES WE OFFER</h2>
+                <h4  id="whitetext">AET:IT offers specialized classes offered nowhere else in Loudoun County</h4>
             </div>
             <div class="row construction_iner">
                 <div class="col-md-4 col-sm-6 construction">
