--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
             </div>
         </div>
         <div class="copyright_area">
-            Copyright 2017 All rights reserved. Designed by <a href="https://colorlib.com">Colorlib.</a>
+            Copyright 2019 All rights reserved. Last Edited: 3/25/19</a>
         </div>
     </footer>
     <!-- End Footer Area -->
