--- a/index.html
+++ b/index.html
@@ -668,27 +668,26 @@
     <section class="latest_blog_area">
         <div class="container">
             <div class="tittle wow fadeInUp">
-                <h2>Our Latest Blog</h2>
-                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+                <h2>Upcoming Events</h2>
             </div>
             <div class="row latest_blog">
                 <div class="col-md-4 col-sm-6 blog_content">
                     <img src="images/blog/lb-1.jpg" alt="">
-                    <a href="#" class="blog_heading">Our Latest Project</a>
-                    <h4><small>by  </small><a href="#">Emran Khan</a><span>/</span><small>ON </small> October 15, 2016</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna. Sed sollicitudin at nisi sed accumsan... <a href="#">Read More</a></p>
+                    <a href="#" class="blog_heading">UVA Hackathon</a>
+                    <h4><small>ON </small> October 15, 2016</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna. Sed sollicitudin at nisi sed accumsan...</p>
                 </div>
                 <div class="col-md-4 col-sm-6 blog_content">
                     <img src="images/blog/lb-2.jpg" alt="">
-                    <a href="#" class="blog_heading">Our Latest Project</a>
-                    <h4><small>by  </small><a href="#">Prodip Ghosh</a><span>/</span><small>ON </small> October 15, 2016</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna. Sed sollicitudin at nisi sed accumsan... <a href="#">Read More</a></p>
+                    <a href="#" class="blog_heading">UVA Coding Competition</a>
+                    <h4><small>ON </small> October 15, 2016</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna. Sed sollicitudin at nisi sed accumsan...</p>
                 </div>
                 <div class="col-md-4 col-sm-6 blog_content">
-                    <img src="images/blog/lb-3.jpg" alt="">
-                    <a href="#" class="blog_heading">Our Latest Project</a>
-                    <h4><small>by  </small><a href="#">Prodip Ghosh</a><span>/</span><small>ON </small> October 15, 2016</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna. Sed sollicitudin at nisi sed accumsan... <a href="#">Read More</a></p>
+                    <img src="images/hackathon.jpg" alt="">
+                    <a href="#" class="blog_heading">Hackathon</a>
+                    <h4><small>ON </small> October 15, 2016</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna. Sed sollicitudin at nisi sed accumsan...</p>
                 </div>
             </div>
         </div>
