finished upcoming events

--- a/index.html
+++ b/index.html
@@ -672,13 +672,13 @@
             </div>
             <div class="row latest_blog">
                 <div class="col-md-4 col-sm-6 blog_content">
-                    <img src="images/blog/lb-1.jpg" alt="">
+                    <img src="images/hackathonevent.jpg" alt="">
                     <a href="#" class="blog_heading">UVA Hackathon</a>
                     <h4><small>ON </small> October 15, 2016</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna. Sed sollicitudin at nisi sed accumsan...</p>
                 </div>
                 <div class="col-md-4 col-sm-6 blog_content">
-                    <img src="images/blog/lb-2.jpg" alt="">
+                    <img src="images/uva.jpg" alt="">
                     <a href="#" class="blog_heading">UVA Coding Competition</a>
                     <h4><small>ON </small> October 15, 2016</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna. Sed sollicitudin at nisi sed accumsan...</p>
