--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- Slider area -->
     <section class="slider_area row m0">
         <div class="slider_inner">
-            <div data-thumb="images/ACLfront.jpg" data-src="images/ACLfront.jpg">
+            <div data-thumb="images/ACLsideview.jpg" data-src="images/ACLsideview.jpg">
                 <div class="camera_caption">
                    <div class="container">
                      <h5 class=" wow fadeInUp animated">Welcome to the</h5>
@@ -135,7 +135,7 @@
                    </div>
                 </div>
             </div>
-            <div data-thumb="images/ACLback.jpg" data-src="images/ACLback.jpg">
+            <div data-thumb="images/entrance.jpg" data-src="images/entrance.jpg">
                 <div class="camera_caption">
                    <div class="container">
                      <h5 class=" wow fadeInUp animated">Welcome to the</h5>
@@ -188,16 +188,7 @@
             </div>
             <div class="row about_row">
                 <div class="who_we_area col-md-7 col-sm-6">
-                    <div class="subtittle">
-                        <h2>WHO WE ARE</h2>
-                    </div>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-                    <a href="#contactsection" class="button_all">Contact Now</a>
                 </div>
-                <div class="col-md-5 col-sm-6 about_client">
-                    <img src="images/about_client.jpg" alt="">
-                </div>
-            </div>
         </div>
     </section>
     <!-- End About Us Area -->
