change ddesciprtion of about us

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="container">
             <div class="tittle wow fadeInUp">
                 <h2>ABOUT US</h2>
-                <h4 id="aboutUsP">The Academy of Engineering and Technology's IT pathway familiarizes students with code. Throughout the course, students could possibly learn to code in java, python, and html depending on the length of attendence. Here students can obtain unique experiences with machine learning and web/app design.</h4>
+                <h4 id="aboutUsP">The Academy of Engineering and Technology's IT pathway familiarizes students with code. The course is designed for students who wish to engage in an intensive study of <strong>computer science</strong> and information technologies. All AET IT students will be required to <strong>design, develop and conduct</strong> multiple research projects while attending the AET.</h4>
             </div>
             <div class="row about_row">
                 <div class="who_we_area col-md-7 col-sm-6">
@@ -462,8 +462,8 @@
     <section class="our_achievments_area" data-stellar-background-ratio="0.3">
         <div class="container">
             <div class="tittle wow fadeInUp">
-                <h2>Our Achievements</h2>
-                <h4>The curriculum of the IT pathway is making strides in how computer science will be taught in schools</h4>
+                <h2 id="whitetext">OUR ACHIEVEMENTS</h2>
+                <h4 id="whitetext">The curriculum of the IT pathway is making strides in how computer science will be taught in schools</h4>
             </div>
             <div class="achievments_row row">
                 <div class="col-md-3 col-sm-6 p0 completed">
