Finished teacher section

--- a/index.html
+++ b/index.html
@@ -393,63 +393,56 @@
     <section class="our_team_area" id="teacherssection">
         <div class="container">
             <div class="tittle wow fadeInUp">
-                <h2>Our Team</h2>
-                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+                <h2>Teachers</h2>
             </div>
             <div class="row team_row">
                 <div class="col-md-3 col-sm-6 wow fadeInUp">
                    <div class="team_membar">
-                        <img src="images/team/tm-1.jpg" alt="">
+                        <img src="images/mrchapin.jpg" alt="" id="centerimg">
                         <div class="team_content">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.lcps.org/Domain/24859">Info</a></li>
+                                <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li> -->
                             </ul>
-                            <a href="#" class="name">Prodip Ghosh</a>
-                            <h6>Founder &amp; CEO</h6>
+                            <a href="#" class="name">John Chapin</a>
+                            <h6>Computer Science</h6>
                         </div>
                    </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
                    <div class="team_membar">
-                        <img src="images/team/tm-2.jpg" alt="">
+                        <img src="images/blankprofile.png" alt="">
                         <div class="team_content">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.lcps.org/Domain/24905">Info</a></li>
                             </ul>
-                            <a href="#" class="name">Emran Khan</a>
-                            <h6>Web-Developer</h6>
+                            <a href="#" class="name">Peter Randall</a>
+                            <h6>Computer Science</h6>
                         </div>
                    </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                    <div class="team_membar">
-                        <img src="images/team/tm-3.jpg" alt="">
+                        <img src="images/blankprofile.png" alt="">
                         <div class="team_content">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.lcps.org/Domain/24900">Info</a></li>
                             </ul>
-                            <a href="#" class="name">Prodip Ghosh</a>
-                            <h6>Founder &amp; CEO</h6>
+                            <a href="#" class="name">Doug Poland</a>
+                            <h6>Computer Science</h6>
                         </div>
                    </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
                    <div class="team_membar">
-                        <img src="images/team/tm-4.jpg" alt="">
+                        <img src="images/blankprofile.png" alt="">
                         <div class="team_content">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.lcps.org/Domain/24927">Info</a></li>
                             </ul>
-                            <a href="#" class="name">Jakaria Khan</a>
-                            <h6>Founder &amp; CEO</h6>
+                            <a href="#" class="name">Erin Wissler</a>
+                            <h6>Physics &amp; Computer Science</h6>
                         </div>
                    </div>
                 </div>
