--- a/index.html
+++ b/index.html
@@ -584,64 +584,36 @@
     <!-- Our Featured Works Area -->
     <section class="featured_works row" data-stellar-background-ratio="0.3" id="activitiessection">
         <div class="tittle wow fadeInUp">
-            <h2>Our Featured Works</h2>
-            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+            <h2>Activities</h2>
+            <h4>Extracurriculars related to computer science.</h4>
         </div>
         <div class="featured_gallery">
             <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
-                <img src="images/gallery/gl-1.jpg" alt="">
+                <img src="images/hackathonAct.png" alt="">
                 <div class="gallery_hover">
-                    <h4>Bolt Apartments</h4>
-                    <a href="#">VIEW PROJECT</a>
+                    <h4>ACL Hackathon</h4>
+                    <a href="#">Learn More</a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
-                <img src="images/gallery/gl-2.jpg" alt="">
+                <img src="images/codingcompetition.jpg" alt="">
                 <div class="gallery_hover">
-                    <h4>Bolt Apartments</h4>
-                    <a href="#">VIEW PROJECT</a>
+                    <h4>Coding Competition Club</h4>
+                    <a href="#">Learn More</a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
-                <img src="images/gallery/gl-3.jpg" alt="">
+                <img src="images/robotics.jpg" alt="">
                 <div class="gallery_hover">
-                    <h4>Bolt Apartments</h4>
-                    <a href="#">VIEW PROJECT</a>
+                    <h4>Robotics Club</h4>
+                    <a href="#">Learn More</a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
-                <img src="images/gallery/gl-4.jpg" alt="">
+                <img src="images/bioinfo.jpg" alt="">
                 <div class="gallery_hover">
-                    <h4>Bolt Apartments</h4>
-                    <a href="#">VIEW PROJECT</a>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
-                <img src="images/gallery/gl-5.jpg" alt="">
-                <div class="gallery_hover">
-                    <h4>Bolt Apartments</h4>
-                    <a href="#">VIEW PROJECT</a>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
-                <img src="images/gallery/gl-6.jpg" alt="">
-                <div class="gallery_hover">
-                    <h4>Bolt Apartments</h4>
-                    <a href="#">VIEW PROJECT</a>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
-                <img src="images/gallery/gl-7.jpg" alt="">
-                <div class="gallery_hover">
-                    <h4>Bolt Apartments</h4>
-                    <a href="#">VIEW PROJECT</a>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
-                <img src="images/gallery/gl-8.jpg" alt="">
-                <div class="gallery_hover">
-                    <h4>Bolt Apartments</h4>
-                    <a href="#">VIEW PROJECT</a>
+                    <h4>Bioinformatics Club</h4>
+                    <a href="#">Learn More</a>
                 </div>
             </div>
         </div>
