--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	    <div class="container">
             <ul class="nav navbar-nav top_nav">
                 <li><a href="#"><i class="fa fa-phone"></i>571-252-1980</a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i>Absentee Email: info@thethemspro.com</a></li>
+                <li><a href="#"><i class="fa fa-envelope-o"></i>Absentee Email: ACLAbsentee@lcps.org</a></li>
                 <li><a href="#"><i class="fa fa-clock-o"></i>School Hours: Mon - Fri 9:15-3:15</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social_nav">
