--- a/index.html
+++ b/index.html
@@ -207,8 +207,20 @@
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-home" aria-hidden="true"></i>
-                        <a href="#">AI/Machine Learning</a>
-                        <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
+                        <a href="#">AI/Machine Learning (Semester 1 of CS Jr Research)</a>
+                        <p>Course ID: 668100</p>
+                          <p>
+                          Grade(s): 11 | Credit: 1, +1.0 course weight
+                          </p>
+                          <p>
+                            Prerequisite: AET AP Advanced Computer Science
+                            The 11th grade Information Technology elective
+                            continues to build on the coding skills and knowledge
+                            obtained in AET Information Technology & Computer
+                            Science and AET AP Advanced Computer Science. With a
+                            strong computer science background, students will explore
+                            the quickly growing fields of Artificial Intelligence and Machine Learning.
+                          </p>
                    </div>
                 </div>
                 <div class="col-md-4 col-sm-6 construction">
@@ -217,8 +229,23 @@
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-keyboard-o" aria-hidden="true"></i>
-                        <a href="#">Web/Mobile App Development</a>
-                        <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
+                        <a href="#">Web/Mobile App Development (Semester 2 of CS Jr Research)</a>
+                        <p>Course ID: 668100</p>
+                          <p>
+                          Grade(s): 11 | Credit: 1, +0.5 course weight
+                          </p>
+                          <p>
+                            Prerequisite: AET AP Advanced Computer Science
+                            The 11th grade Information Technology elective
+                            continues to build on the coding skills and knowledge
+                            obtained in AET Information Technology & Computer
+                            Science and AET AP Advanced Computer Science. With a
+                            strong computer science background, students will explore
+                            the quickly growing fields of Web and Mobile App development.
+                            Throughout the year, students will have the opportunity to
+                            complete multiple labs and problem sets as individuals and
+                            in collaborative teams.
+                          </p>
                    </div>
                 </div>
                 <div class="col-md-4 col-sm-6 construction">
@@ -227,8 +254,45 @@
                    </div>
                    <div class="cns-content">
                         <i class="fa fa-gavel" aria-hidden="true"></i>
-                        <a href="#">CS Senior Research</a>
-                        <p>Lorem Ipsum is simply dummy text of the print-ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
+                        <a href="#">AET Senior Research - Computer Systems</a>
+                        <p>Course ID: 668200</p>
+                          <p>
+                          Grade(s): 12 | Credit: 1, +0.5 course weight
+                          </p>
+                        <p>Disciplinary science research activities using inquirybased methodology and increase their skill level with
+                          research and development techniques and protocols. This
+                          course also enhances the ability of students to read and
+                          write scientific papers at the publication level. Students in
+                          senior research continue their work on the plan created
+                          during the junior research course. They conduct their
+                          research and development with the guidance of a faculty
+                          mentor. Regular presentation of results is an expectation for
+                          all research student</p>
+                   </div>
+                </div>
+                <div class="col-md-4 col-sm-6 construction">
+                   <div class="cns-img">
+                        <img src="images/seniorresearch.jpg" alt="">
+                   </div>
+                   <div class="cns-content">
+                        <i class="fa fa-gavel" aria-hidden="true"></i>
+                        <a href="#">AET AP Computer Science </a>
+                        <p>Course ID: 668000</p>
+                          <p>
+                          Grade(s): 10 | Credit: 1, +1.0 course weight
+                          </p>
+                        <p>
+                        This course is the second in the series of computer
+                        science courses (two-year sequence of courses) designed for
+                        AET IT pathway students. This is a college-level, fast-paced
+                        course that completes the course outline of the College
+                        board’s AP Computer Science program. The course
+                        emphasizes many extended lab procedures and has
+                        elements of research and design. Course content includes
+                        sorting algorithms (selection, insertion, merge, quick and
+                        heap) and data structures (arrays, recursion, linked lists,
+                        stacks, queues, trees, sets, maps and graphs). The
+                        programming language is JAVA. </p>
                    </div>
                 </div>
             </div>
